--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.1.0",
+    "jest": "^27.4.3",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
