--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-react": "^1.1.3",
@@ -36,5 +36,6 @@
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.3"
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
