--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vite-react",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
