--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on: pull_request
 jobs:
   ci:
-    name: check codebase
+    name: check code
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
