--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,17 @@
     "useDefineForClassFields": true,
     "allowJs": false,
     "strict": true,
-    "strictNullChecks": true,
-    "alwaysStrict": true,
-    "noImplicitAny": true,
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
+    "importsNotUsedAsValues": "error",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
