--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "msw": "^0.47.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
@@ -45,5 +46,8 @@
     "typescript": "^4.8.3",
     "vite": "^3.1.2"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
