--- a/package.json
+++ b/package.json
@@ -16,35 +16,38 @@
     "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@tanstack/react-location": "^3.7.4",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.0.3",
-    "@types/react": "^18.0.20",
+    "@types/jest": "^29.1.1",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.11",
-    "eslint": "^8.23.1",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.0.3",
+    "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.0.3",
     "msw": "^0.47.3",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
-    "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.2"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4"
   },
   "packageManager": "yarn@3.1.1",
   "msw": {
