--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
