--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "dependencies": {
     "@tanstack/react-location": "^3.7.4",
     "axios": "^0.27.2",
-    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.2",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "tailwind-merge": "^1.6.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
