--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.2",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "tailwind-merge": "^1.6.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
