--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    // TODO: remove noImplicitAny config later on
+    "noImplicitAny": false,
     "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
