add eslint no implicit any

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "jest",
-    "eslint": "eslint \"src/**/*.{ts,tsx}\" --cache && tsc --noEmit",
+    "eslint": "eslint \"src/**/*.{ts,tsx}\"  && tsc --noEmit",
     "eslint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix && tsc --noEmit",
     "fix": "yarn prettier:write && yarn eslint:fix",
     "prettier:write": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-no-implicit-any": "^2.0.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
