--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2",
+    "undici": "^6.7.1",
     "vite": "^5.1.6"
   },
   "packageManager": "yarn@3.1.1",
