--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^1.3.2",
+    "msw": "^2.2.3",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2",
+    "undici": "^5.0.0",
     "vite": "^5.1.6"
   },
   "packageManager": "yarn@3.1.1",
